# rustvdif

./: Cargo.toml  LICENSE-Apache.md  LICENSE-MIT.md  README.md
examples/: fifo.rs  file.rs  header.rs  vtp.rs
src/: data_encoding.rs  encoding.rs  file.rs  frame.rs  header.rs  header_encoding.rs  headerencoding.rs  io.rs  lib.rs  parsing.rs  payload.rs  payloadencoding.rs  read.rs  sim.rs  udp.rs  vtp.rs
src/decoding/: header.rs  mod.rs  payload.rs
src/encoding/: header.rs  mod.rs  payload.rs
src/net/: mod.rs  udp.rs  vtp.rs
src/parsing/: header.rs  mod.rs
src/recording/: mod.rs  receiver.rs
src/utils/: buffer.rs  mod.rs  udpsockbuf.rs  vtpsockbuf.rs
tests/: encode_decode.rs
