[package]
name = "rustvdif"
version = "0.4.1"
authors = ["Jacob Brooks"]
edition = "2021"
description = "A Rust library for interacting with data encoded in the VLBI Data Interchange Format (VDIF)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/JakeEBrooks/rustvdif"

[dependencies]
chrono = "0"

